# FoodStore-SDD

./: .gitignore  AGENTS-REFERENCIA.md  AGENTS.md  README.md  docker-compose.yml  skills-lock.json
backend/: .env.example  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/admin/: rbac_router.py  router.py  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_refresh_token_table.py  b2c3d4e5f6a7_add_estados_pedido_and_formas_pago.py  ca6b88a3e7bf_init_all_tables.py  d21e73513818_initial_schema.py
backend/app/: main.py
backend/app/core/: config.py  database.py  errors.py  security.py  unit_of_work.py
backend/app/db/: models.py  repository.py  schemas.py  seed.py
backend/app/models/: __init__.py  catalogo.py  identidad.py  ventas.py
backend/app/modules/auth/: __init__.py  dependencies.py  router.py  schemas.py  service.py
backend/auth/: repository.py  router.py  schemas.py  service.py
backend/categorias/: router.py
backend/core/: config.py  database.py  dependencies.py  error_handler.py  exceptions.py  repository.py  security.py  uow.py
backend/direcciones/: router.py
backend/ingredientes/: router.py
backend/pagos/: router.py
backend/pedidos/: router.py
backend/productos/: router.py
backend/refreshtokens/: router.py
backend/tests/: conftest.py  test_rbac.py
backend/usuarios/: router.py
docs/: CHANGES.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
openspec/docs/: index.md
(+134 files in other folders)
