[project]
name = "foodstore-api"
version = "1.0.0"
description = "Food Store e-commerce API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "sqlmodel>=0.0.16",
    "alembic>=1.13.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "pydantic-settings>=2.3.0",
    "bcrypt>=4.0.0,<4.1",
    "psycopg2-binary>=2.9.9",
    "uvicorn[standard]>=0.29.0",
    "mercadopago>=2.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
